docs:add hudi note